Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-516

New crasher with status code stats

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 2.1.4
    • HTTP
    • None

    Description

      (gdb) bt
      #0 0x000000000054eb59 in http_hdr_status_get (s=0x7fffeafdc4c8, total_time=32545564000, request_process_time=32545564000) at HttpTransact.cc:8896
      #1 status_get (s=0x7fffeafdc4c8, total_time=32545564000, request_process_time=32545564000) at ../../iocore/cache/../../proxy/http2/../hdrs/HTTP.h:1133
      #2 HttpTransact::client_result_stat (s=0x7fffeafdc4c8, total_time=32545564000, request_process_time=32545564000) at HttpTransact.cc:8896
      #3 0x000000000052edbe in HttpSM::update_stats (this=0x7fffeafdc440) at HttpSM.cc:6264
      #4 0x0000000000534848 in HttpSM::kill_this (this=0x7fffeafdc440) at HttpSM.cc:6184
      #5 0x0000000000534c68 in HttpSM::main_handler (this=0x7fffeafdc440, event=104, data=0x7fffe4013740) at HttpSM.cc:2554
      #6 0x00000000006982f1 in handleEvent (event=<value optimized out>, nh=0x7ffff5d7b638, vc=0x7fffe4013660) at ../../iocore/eventsystem/I_Continuation.h:147
      #7 read_signal_and_update (event=<value optimized out>, nh=0x7ffff5d7b638, vc=0x7fffe4013660) at UnixNetVConnection.cc:146
      #8 read_signal_done (event=<value optimized out>, nh=0x7ffff5d7b638, vc=0x7fffe4013660) at UnixNetVConnection.cc:176
      #9 0x000000000069ad3d in read_from_net (nh=0x7ffff5d7b638, vc=0x7fffe4013660, thread=<value optimized out>) at UnixNetVConnection.cc:308
      #10 0x0000000000691ed1 in NetHandler::mainNetEvent (this=0x7ffff5d7b638, event=<value optimized out>, e=<value optimized out>) at UnixNet.cc:414
      #11 0x00000000006be014 in handleEvent (this=0x7ffff5d7a010, e=0xf76570, calling_code=5) at I_Continuation.h:147
      #12 EThread::process_event (this=0x7ffff5d7a010, e=0xf76570, calling_code=5) at UnixEThread.cc:149
      #13 0x00000000006be9a3 in EThread::execute (this=0x7ffff5d7a010) at UnixEThread.cc:271
      #14 0x00000000006bce9a in spawn_thread_internal (a=0xf68f20) at Thread.cc:85
      #15 0x00007ffff7bca761 in start_thread (arg=0x7ffff5975710) at pthread_create.c:301
      #16 0x00007ffff6e624fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: